load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "atomic",
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp"]),
    srcs = glob(["src/*"]),
    deps = [
        "@boost//libs/predef",
        "@boost//libs/winapi",
        "@boost//libs/assert",
        "@boost//libs/static_assert",
        "@boost//libs/preprocessor",
    ],
)